--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site escola - Priscila</title>
+    <title> Site escola - Priscila </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="cabeçalho">
+        <h1 class="cabeçalho-título"> Colégio 14 de Dezembro </h1>
+        <ul class="cabeçalho-lista">
+            <li class="cabeçalho-lista-item">Escola</li>
+            <li class="cabeçalho-lista-item">Estudantes</li>
+        </ul>
+    </header>
     
 </body>
 </html>
