--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Site escola - Priscila </title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mate&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="cabeçalho">
@@ -15,6 +18,22 @@
             <li class="cabeçalho-lista-item">Estudantes</li>
         </ul>
     </header>
+    <section class="escola">
+        <div class="escola-div-conteúdo">       
+        <h2 class="escola-título"> Sobre a escola  </h2>
+        <p class="escola-texto-um"> O Colégio Estadual 14 de Dezembro Ensino Fundamental, Médio, Profissional e Normal, iniciou suas atividades com o nome de Grupo Escolar de Alvorada do Sul, instalado pelo Decreto nº 16122, publicado no Diário Oficial de 08 de março de 1955, cuja a inauguração ocorreu no goverto de Bento Munhoz da Rocha Neto</p>
+        <p class="escola-texto-dois"> Em 22 de Abril de 1998, com a municipalização do Ensino Fundamental de 1º a 4º séries, nossa instituição passou a Colégio Estadual "14 de Dezembro" Ensino de 2º Grau, conforme a Resolução Secretarial nº 1043/98 DOE nº, 5245, de 08 de maui de 1998.</p>
+        </div>
+        <img class="escola-imagem" src="imagem-escola.png" alt="imagem de uma sala de aula - desenho">
+
+    </section>
+
+    <section class="Equipe">
+        <h2 class="Equipe-título"> Conheça os integrantes da nossa Escola </h2>
+        <h3 class="Equipe-estudantes"> Estudantes </h3>
+        <img class="Equipe-estudantes-imagem" src="alunosteste.jpeg" alt="imagem teste de aluno">
+        <img class="Equipe-logotipo-instagram" src="instagram.png" alt="logotipo do instagram">
+    </section>
     
 </body>
 </html>
