Site - quase finalizado

--- a/index.html
+++ b/index.html
@@ -25,15 +25,71 @@
         <p class="escola-texto-dois"> Em 22 de Abril de 1998, com a municipalização do Ensino Fundamental de 1º a 4º séries, nossa instituição passou a Colégio Estadual "14 de Dezembro" Ensino de 2º Grau, conforme a Resolução Secretarial nº 1043/98 DOE nº, 5245, de 08 de maui de 1998.</p>
         </div>
         <img class="escola-imagem" src="imagem-escola.png" alt="imagem de uma sala de aula - desenho">
-
     </section>
+
 
     <section class="Equipe">
         <h2 class="Equipe-título"> Conheça os integrantes da nossa Escola </h2>
         <h3 class="Equipe-estudantes"> Estudantes </h3>
-        <img class="Equipe-estudantes-imagem" src="alunosteste.jpeg" alt="imagem teste de aluno">
-        <img class="Equipe-logotipo-instagram" src="instagram.png" alt="logotipo do instagram">
+
+        <div class="Equipe-todos"> 
+            <div class="Equipe-div-aluno"> 
+            <img class="Equipe-estudantes-imagem" src="alunosteste.jpeg" alt="imagem teste de aluno">
+            <p class="Equipe-aluno"> Aluno 1 </p>
+            </div>
+
+            <div class="Equipe-div-aluno"> 
+            <img class="Equipe-estudantes-imagem" src="alunosteste.jpeg" alt="imagem teste de aluno">
+            <p class="Equipe-aluno"> Aluno 2 </p>
+            </div>
+
+            <div class="Equipe-div-aluno"> 
+            <img class="Equipe-estudantes-imagem" src="alunosteste.jpeg" alt="imagem teste de aluno">
+            <p class="Equipe-aluno"> Aluno 3 </p>
+            </div>
+
+            <div class="Equipe-div-aluno"> 
+            <img class="Equipe-estudantes-imagem" src="alunosteste.jpeg" alt="imagem teste de aluno">
+            <p class="Equipe-aluno"> Aluno 4 </p>
+            </div>
+
+            <div class="Equipe-div-aluno"> 
+            <img class="Equipe-estudantes-imagem" src="alunosteste.jpeg" alt="imagem teste de aluno">
+            <p class="Equipe-aluno"> Aluno 5 </p>
+            </div>
+
+            <div class="Equipe-div-aluno"> 
+            <img class="Equipe-estudantes-imagem" src="alunosteste.jpeg" alt="imagem teste de aluno">
+            <p class="Equipe-aluno"> Aluno 6 </p>
+            </div>
+
+            <div class="Equipe-div-aluno"> 
+            <img class="Equipe-estudantes-imagem" src="alunosteste.jpeg" alt="imagem teste de aluno">
+            <p class="Equipe-aluno"> Aluno 7 </p>
+            </div>
+
+            <div class="Equipe-div-aluno"> 
+            <img class="Equipe-estudantes-imagem" src="alunosteste.jpeg" alt="imagem teste de aluno">
+            <p class="Equipe-aluno"> Aluno 8 </p>
+            </div>
+
+            <div class="Equipe-div-aluno"> 
+            <img class="Equipe-estudantes-imagem" src="alunosteste.jpeg" alt="imagem teste de aluno">
+            <p class="Equipe-aluno"> Aluno 9 </p>
+            </div>
+
+            <div class="Equipe-div-aluno"> 
+            <img class="Equipe-estudantes-imagem" src="alunosteste.jpeg" alt="imagem teste de aluno">
+            <p class="Equipe-aluno"> Aluno 10 </p>
+            </div>
+        </div>
     </section>
+
+    
+    <footer class="rodapé">
+        <a href="https://www.instagram.com/colestadualquatorzededezembro/"><img class="rodapé-logotipo-instagram" src="instagram.png" alt="ícone do instagram"></a>
+        <p class="rodapé-texto-instagram"> colestadualquatorzededezembro </p>
+    </footer>
     
 </body>
 </html>
